--- a/GI_TextMap/GI_TextMap.csproj
+++ b/GI_TextMap/GI_TextMap.csproj
@@ -5,6 +5,18 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+    <Copyright>Hiro420</Copyright>
+    <Description>TextMap parser for some open-world anime game, written in C#</Description>
+    <RepositoryUrl>https://github.com/Hiro420/GI_TextMap</RepositoryUrl>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
